--- a/examples/1150215/css/main.css
+++ b/examples/1150215/css/main.css
@@ -116,8 +116,8 @@ iframe {
 }
 
 #navigation {
-    padding: 0 var(--er);
-    width: calc(100% - 2 * var(--er));
+    padding: 0 7px;
+    width: calc(100% - 2 * 7px);
     height: 50px;
     display: inline-flex;
     justify-content: space-between;
@@ -129,7 +129,8 @@ iframe {
         border-radius: var(--er);
         aspect-ratio: 1;
         transition: all 0.6s cubic-bezier(0.41, 0.91, 0.51, 0.96);
-            opacity: 0;
+        opacity: 0;
+        cursor: pointer;
 
         &:hover {
             opacity: 1;
@@ -149,9 +150,14 @@ iframe {
     aspect-ratio: 1;
     border-radius: 50%;
     transition: all 0.6s cubic-bezier(0.41, 0.91, 0.51, 0.96);
+    cursor: pointer;
 
     &.left {
         background-color: #aaa;
+    }
+    &:hover {
+        transform: scale(1.2);
+        background-color: #ccc;
     }
     &.active {
         background-color: #fff;
@@ -183,5 +189,5 @@ iframe {
 #textBig {
     max-height: calc(100% - 2 * var(--er));
     overflow-y: scroll;
-    font-size: 3dvh;
+    font-size: 3.5dvh;
 }
